src/objects/echosign_dev1__Form_Field_Child_Mapping_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__Field_Name__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Form_Field_Child_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Field Child Mapping</label>
        <referenceTo>echosign_dev1__Form_Field_Child_Mapping__c</referenceTo>
        <relationshipLabel>Form Field Child Mapping Entries</relationshipLabel>
        <relationshipName>Form_Field_Child_Mapping_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Form_Field_Name__c</fullName>
        <label>Target Document Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Form Field Child Mapping Entry</label>
    <nameField>
        <displayFormat>FFCME-{00000000}</displayFormat>
        <label>Form Field Child Mapping Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Field Child Mapping Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>